--- a/app/www2/index.html
+++ b/app/www2/index.html
@@ -230,9 +230,9 @@
         </div>
 
         <!-- bottom navigation -->
-        <div class=" sec-nav navbar-fixed-bottom" data-bind="with: browser">
+        <div class="sec-nav navbar-fixed-bottom" data-bind="with: browser">
             <!-- navigation -->
-            <div class="container-pager bg-info">
+            <div class="navigation-toolbar container-pager bg-info">
                 <!-- Type -->
                 <div class="typeSelector pull-right">
                     <ul class=" pagination pagination-sm ">
