--- a/app/www/index.html
+++ b/app/www/index.html
@@ -572,7 +572,7 @@
 <script type="text/javascript" src="assets/vendors/jquery.scrollTo.min.js"></script>
 <script type="text/javascript" src="assets/vendors/jquery.ba-throttle-debounce.min.js"></script>
 <script type="text/javascript" src="assets/vendors/knockout-3.1.0.js"></script>
-<script data-main="assets/main" src="assets/require-2.1.11.js"></script>
+<script data-main="assets/js/main" src="assets/js/require-2.1.11.js"></script>
 
 </body>
 </html>
