--- a/app/www/index.html
+++ b/app/www/index.html
@@ -329,7 +329,7 @@
                     <ul class="pagination-status pagination pagination-sm">
                         <li>
                             <a href="#">
-                                <span data-bind="text:limit_start()"></span> / <span data-bind="text:limit_end()"></span>
+                                <span data-bind="text:limit_start_text()"></span> / <span data-bind="text:limit_end()"></span>
                                 |
                                 total <span data-bind="text:total_count()"></span> items
                             </a>
