ui when filedetail displays, ensure the browser switch to fixed position to disable it effect on scrolling

--- a/app/www/index.html
+++ b/app/www/index.html
@@ -160,7 +160,7 @@
         </div>
         <!-- header -->
 
-        <div class="fileBrowser" data-bind="with: browser,css:{loading:!browser.loaded()}">
+        <div class="fileBrowser" data-bind="with: browser,css:{loading:!browser.loaded()},style: { position: fileDetail.tab()!='' ? 'fixed' : '' }">
 
             <!-- browser -->
             <div data-bind="if: items().length">
